--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <meta charset="utf-8" />
 
 <link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="src/devtools/client/themes/toolbox.css" />
+<link rel="stylesheet" href="src/devtools/client/themes/variables.css" />
 
 <body>
 <canvas id="graphics"></canvas>
-<div id="toolbox">
-<div id="toolbox-timeline">TIMELINE</div>
-<div id="toolbox-toolbar">TOOLBAR</div>
-<div id="toolbox-contents">CONTENTS</div>
+<div id="toolbox" class="theme-light">
+  <div id="toolbox-timeline">TIMELINE</div>
+  <div id="toolbox-toolbar">
+    <div class="toolbar-panel-button" id="toolbox-toolbar-console">Console</div>
+    <div class="toolbar-panel-button" id="toolbox-toolbar-debugger">Debugger</div>
+  </div>
+  <div id="toolbox-contents">CONTENTS</div>
 </div>
 </body>
 
