debugger renders, sort of

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="toolbar-panel-button" id="toolbox-toolbar-console">Console</div>
     <div class="toolbar-panel-button" id="toolbox-toolbar-debugger">Debugger</div>
   </div>
-  <div id="toolbox-contents"></div>
+  <div id="toolbox-contents">
+    <div class="toolbar-panel-content" id="toolbox-content-console"></div>
+    <div class="toolbar-panel-content" id="toolbox-content-debugger"></div>
+  </div>
 </div>
 </body>
 
