--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
-<html>
+<html class="theme-light">
   <meta charset="utf-8" />
-
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="src/devtools/client/themes/toolbox.css" />
-  <link rel="stylesheet" href="src/devtools/client/themes/variables.css" />
-  <link rel="stylesheet" href="src/devtools/client/themes/webconsole.css" />
-  <link rel="stylesheet" href="src/devtools/client/themes/common.css" />
-
   <body>
     <canvas id="graphics"></canvas>
-    <div id="toolbox" class="theme-light">
+    <div id="toolbox">
       <div id="toolbox-timeline">TIMELINE</div>
       <div id="toolbox-toolbar">
         <div class="toolbar-panel-button" id="toolbox-toolbar-console">
