Render debugger along with webconsole, use element IDs consistent with tool IDs.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <div id="toolbox">
       <div id="toolbox-timeline">TIMELINE</div>
       <div id="toolbox-toolbar">
-        <div class="toolbar-panel-button" id="toolbox-toolbar-console">
+        <div class="toolbar-panel-button" id="toolbox-toolbar-webconsole">
           Console
         </div>
         <div class="toolbar-panel-button" id="toolbox-toolbar-debugger">
@@ -13,8 +13,8 @@
         </div>
       </div>
       <div id="toolbox-contents">
-        <div class="toolbar-panel-content" id="toolbox-content-console"></div>
-        <div class="toolbar-panel-content" id="toolbox-content-debugger"></div>
+        <div class="toolbar-panel-content" id="toolbox-content-webconsole"></div>
+        <div class="toolbar-panel-content" id="toolbox-content-jsdebugger"></div>
       </div>
     </div>
   </body>
