Use toolbar buttons to switch between devtools

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <body>
     <canvas id="graphics"></canvas>
     <div id="toolbox">
-      <div id="toolbox-timeline">TIMELINE</div>
+      <div id="toolbox-timeline"></div>
       <div id="toolbox-toolbar">
         <div class="toolbar-panel-button" id="toolbox-toolbar-webconsole">
           Console
         </div>
-        <div class="toolbar-panel-button" id="toolbox-toolbar-debugger">
+        <div class="toolbar-panel-button" id="toolbox-toolbar-jsdebugger">
           Debugger
         </div>
       </div>
