--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
         </div>
       </div>
       <div id="toolbox-contents">
-        <div class="toolbar-panel-content" id="toolbox-content-webconsole"></div>
-        <div class="toolbar-panel-content" id="toolbox-content-jsdebugger"></div>
+        <div
+          class="toolbar-panel-content"
+          id="toolbox-content-webconsole"
+        ></div>
+        <div
+          class="toolbar-panel-content"
+          id="toolbox-content-jsdebugger"
+        ></div>
       </div>
     </div>
   </body>
 
+  <script src="src/devtools/client/shared/sourceeditor/codemirror/codemirror.bundle.js"></script>
   <script src="dist/main.js"></script>
 </html>
