--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
       <div id="toolbox-timeline"></div>
       <div id="toolbox-toolbar">
         <div class="toolbar-panel-button" id="toolbox-toolbar-webconsole">
+          <div class="toolbar-panel-icon"></div>
           Console
         </div>
         <div class="toolbar-panel-button" id="toolbox-toolbar-jsdebugger">
+          <div class="toolbar-panel-icon"></div>
           Debugger
         </div>
       </div>
