--- a/src/devtools/client/inspector/markup/markup.xhtml
+++ b/src/devtools/client/inspector/markup/markup.xhtml
@@ -19,5 +19,7 @@
   <div id="root-wrapper" role="presentation">
     <div id="root" role="presentation"></div>
   </div>
+  <a id="pause-button" hidden="true"></a>
+  <a id="loading">Loading…</a>
 </body>
 </html>
