Fixes for packaging inspector

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
         <div class="toolbar-panel-icon"></div>
         Console
       </div>
+      <div class="toolbar-panel-button" id="toolbox-toolbar-inspector">
+        <div class="toolbar-panel-icon"></div>
+        Inspector
+      </div>
     </div>
     <div id="toolbox-contents">
       <div class="toolbar-panel-content" id="toolbox-content-jsdebugger"></div>
       <div class="toolbar-panel-content" id="toolbox-content-webconsole"></div>
+      <div class="toolbar-panel-content" id="toolbox-content-inspector"></div>
     </div>
   </div>
 </body>
