--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
       </div>
 
       <!-- Markup Container -->
-      <div id="markup-box"></div>
+      <div id="markup-box" class="theme-body devtools-monospace">
+  <div id="root-wrapper" role="presentation">
+    <div id="root" role="presentation"></div>
+  </div>
+  <a id="loading">Loading…</a>
+      </div>
       <div id="inspector-breadcrumbs-toolbar" class="devtools-toolbar">
         <div id="inspector-breadcrumbs" class="breadcrumbs-widget-container"
              role="toolbar" data-localization="aria-label=inspector.breadcrumbs.label" tabindex="0"></div>
