--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
       <!-- Markup Container -->
       <div id="markup-box" class="theme-body devtools-monospace">
-  <div id="root-wrapper" role="presentation">
-    <div id="root" role="presentation"></div>
-  </div>
-  <a id="loading">Loading…</a>
+        <div id="markup-root-wrapper" role="presentation">
+          <div id="markup-root" role="presentation"></div>
+        </div>
+        <a id="markup-loading">Loading…</a>
       </div>
       <div id="inspector-breadcrumbs-toolbar" class="devtools-toolbar">
         <div id="inspector-breadcrumbs" class="breadcrumbs-widget-container"
