Highlighter nodes are constructed (though they aren't rendering properly)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <body>
   <canvas id="graphics"></canvas>
+  <div id="highlighter-root"></div>
   <div id="toolbox">
     <div id="toolbox-timeline"></div>
     <div id="toolbox-toolbar">
