--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <canvas id="graphics"></canvas>
   <div id="highlighter-root"></div>
   <div id="toolbox">
+    <div id="toolbox-border"></div>
     <div id="toolbox-timeline"></div>
     <div id="toolbox-toolbar">
       <div class="toolbar-panel-button" id="toolbox-toolbar-jsdebugger">
