Load scripts asynchronously

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   </div>
 </body>
 
-<script src="src/devtools/client/shared/sourceeditor/codemirror/codemirror.bundle.js"></script>
-<script src="dist/main.js"></script>
+<script async src="src/devtools/client/shared/sourceeditor/codemirror/codemirror.bundle.js"></script>
+<script async src="dist/main.js"></script>
 
 </html>
