--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html class="theme-light">
   <meta charset="utf-8" />
 
-  <body></body>
+  <body>
+    <div id="viewer"></div>
+  </body>
 
   <script>
     window.loader = {
