--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  <meta charset="utf-8" />
+  <head>
+    <meta charset="utf-8" />
+    <title>Web Replay</title>
+  </head>
 
   <body>
     <div id="app"></div>
