--- a/index.html
+++ b/index.html
@@ -20,4 +20,47 @@
     src="src/devtools/client/shared/sourceeditor/codemirror/codemirror.bundle.js"
   ></script>
   <script async src="dist/main.js"></script>
+  <script>
+    window.intercomSettings = {
+      app_id: "k7f741xx",
+      // name: "<%= current_user.name %>", // Full name
+      // email: "<%= current_user.email %>", // Email address
+      // created_at: "<%= current_user.created_at.to_i %>", // Signup date as a Unix timestamp
+    };
+  </script>
+
+  <script>
+    // We pre-filled your app ID in the widget URL: 'https://widget.intercom.io/widget/k7f741xx'
+    (function () {
+      var w = window;
+      var ic = w.Intercom;
+      if (typeof ic === "function") {
+        ic("reattach_activator");
+        ic("update", w.intercomSettings);
+      } else {
+        var d = document;
+        var i = function () {
+          i.c(arguments);
+        };
+        i.q = [];
+        i.c = function (args) {
+          i.q.push(args);
+        };
+        w.Intercom = i;
+        var l = function () {
+          var s = d.createElement("script");
+          s.type = "text/javascript";
+          s.async = true;
+          s.src = "https://widget.intercom.io/widget/k7f741xx";
+          var x = d.getElementsByTagName("script")[0];
+          x.parentNode.insertBefore(s, x);
+        };
+        if (w.attachEvent) {
+          w.attachEvent("onload", l);
+        } else {
+          w.addEventListener("load", l, false);
+        }
+      }
+    })();
+  </script>
 </html>
