Add test for inspecting iframes, fixes #473

--- a/test/examples/doc_inspector_basic.html
+++ b/test/examples/doc_inspector_basic.html
@@ -22,5 +22,5 @@ function iframeFinished() {
   </div>
   <div id="div4" some-attribute="STUFF"></div>
 </div>
-<iframe src="iframe.html" id="iframe"></iframe>
+<iframe src="iframe.html" id="myiframe"></iframe>
 </body>
