Fix test harness issue due to message name collision.

--- a/test/examples/doc_control_flow.html
+++ b/test/examples/doc_control_flow.html
@@ -76,7 +76,7 @@ function startNextCallback() {
       try { callback() } catch (e) {}
     });
   } else {
-    dump(`RecReplaySendAsyncMessage RecordingFinished`);
+    dump(`RecReplaySendAsyncMessage Example__Finished`);
   }
 }
 
