--- a/test/examples/doc_debugger_statements.html
+++ b/test/examples/doc_debugger_statements.html
@@ -10,7 +10,7 @@ function foo() {
   setTimeout(recordingFinished, 0);
 }
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 setTimeout(foo, 0);
 </script>
