--- a/test/examples/doc_inspector_styles.html
+++ b/test/examples/doc_inspector_styles.html
@@ -5,7 +5,7 @@
 <div id="important">IMPORTANT</div>
 <script>
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 function foo() {
   document.getElementById("maindiv").innerHTML = "GOODBYE";
