--- a/test/examples/doc_rr_console.html
+++ b/test/examples/doc_rr_console.html
@@ -6,7 +6,7 @@ const object = {
 };
 
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 let iteration = 0;
 function f() {
