--- a/test/examples/doc_rr_worker.html
+++ b/test/examples/doc_rr_worker.html
@@ -5,7 +5,7 @@
 <script>
 
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 
 const worker = new Worker("worker.js");
