--- a/test/examples/doc_async.html
+++ b/test/examples/doc_async.html
@@ -4,7 +4,7 @@
 </body>
 <script>
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 async function foo() {
   console.log("foo");
