--- a/test/examples/doc_events.html
+++ b/test/examples/doc_events.html
@@ -3,7 +3,7 @@
 <script>
 
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 
 const divvy = document.getElementById("divvy");
