--- a/test/examples/doc_exceptions.html
+++ b/test/examples/doc_exceptions.html
@@ -1,7 +1,7 @@
 <div id="divvy">Hello World!</div>
 <script>
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 let number = 0;
 setTimeout(foo, 0);
