--- a/test/examples/doc_inspector_basic.html
+++ b/test/examples/doc_inspector_basic.html
@@ -2,7 +2,7 @@
 <div style="color: red" onclick="console.log('LOG')" id="maindiv">HELLO</div>
 <script>
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 
 function foo() {
