--- a/test/examples/doc_rr_basic.html
+++ b/test/examples/doc_rr_basic.html
@@ -4,7 +4,7 @@
 </body>
 <script>
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 var number = 0;
 function f() {
