--- a/test/examples/doc_rr_blackbox.html
+++ b/test/examples/doc_rr_blackbox.html
@@ -7,7 +7,7 @@
 <script>
 
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 var number = 0;
 function testStepping() {
