--- a/test/examples/doc_rr_logs.html
+++ b/test/examples/doc_rr_logs.html
@@ -9,7 +9,7 @@
 <script>
 
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 var number = 0;
 function f() {
