--- a/test/examples/doc_rr_objects.html
+++ b/test/examples/doc_rr_objects.html
@@ -2,7 +2,7 @@
 <script>
 
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 
 function foo() {
