--- a/test/examples/doc_rr_preview.html
+++ b/test/examples/doc_rr_preview.html
@@ -22,6 +22,6 @@ function update(obj, arr) {
   arr.push("new");
 }
 function recordingFinished() {
-  dump(`RecReplaySendAsyncMessage RecordingFinished`);
+  dump(`RecReplaySendAsyncMessage Example__Finished`);
 }
 </script>
