--- a/test/examples/doc_inspector_shorthand.html
+++ b/test/examples/doc_inspector_shorthand.html
@@ -5,7 +5,7 @@
 <body>
   <div id="first" class="parent">
     Foo
-    <div class="child">
+    <div id="second" class="child">
       Bar
     </div>
   </div>
