--- a/test/examples/doc_rr_error.html
+++ b/test/examples/doc_rr_error.html
@@ -33,5 +33,16 @@ window.setTimeout(() => {
 window.setTimeout(() => {
   throw new MyError2();
 });
+
+class Superclass {
+  constructor() {
+    this.x = 0;
+    console.log("superclass");
+  }
+}
+class Subclass extends Superclass {}
+window.setTimeout(() => {
+  new Subclass();
+});
 </script>
 </html>
