Change the build for Vercel

--- a/index.html
+++ b/index.html
@@ -26,5 +26,5 @@
       lazyGetter() {},
     };
   </script>
-  <script async src="dist/main.js"></script>
+  <script async src="main.js"></script>
 </html>
